# rrr

./: README.md
rrr_challenge/: CMakeLists.txt  package.xml
rrr_challenge/config/: default.rviz
rrr_challenge/include/rrr_challenge/mujoco_files/mesh/: first_arm - Part 1.stl  second_arm.stl
rrr_challenge/include/rrr_challenge/mujoco_files/model/: model.xml
rrr_challenge/include/rrr_challenge/nodes/: controller.py  end_effector_listener.py  end_effector_plotter.py  master_node.py  visualization_node.py
rrr_challenge/include/rrr_challenge/scripts/: controller.py  end_effector_listener.py  end_effector_plotter.py  master_node.py  visualization_node.py
rrr_challenge/include/rrr_challenge/urdf/: rrr.urdf
rrr_challenge/include/rrr_challenge/urdf/mesh/: base_joint - Part 1.stl  third_arm - Part 1.stl
rrr_challenge/launch/: display.launch.py
rrr_challenge/src/: main.cpp
